infra/k8s/base/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nafura-infra
  labels:
    nafura.io/layer: infra
